[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "neqsim-dev-setup"
version = "0.1.0"
description = "JVM bootstrap helpers for NeqSim Jupyter development notebooks"
requires-python = ">=3.8"
dependencies = ["jpype1"]

[tool.setuptools]
py-modules = ["neqsim_dev_setup"]
