[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "neqsim-dev-setup"
version = "0.1.0"
description = "JVM bootstrap helpers for NeqSim Jupyter development notebooks"
requires-python = ">=3.8"
dependencies = ["jpype1"]

[project.optional-dependencies]
pdf = ["pymupdf>=1.22.0"]
ocr = [
    "pymupdf>=1.22.0",
    "ocrmypdf>=15.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]

[project.scripts]
neqsim = "neqsim_cli:main"

[tool.setuptools]
py-modules = ["neqsim_dev_setup", "neqsim_cli"]
